Fix the footnote and the numeral usage

--- a/tex/p036.tex
+++ b/tex/p036.tex
@@ -39,10 +39,10 @@
 \vs p036 3:3 When, in accordance with approved formulas, the physical patterns have been provided, then do the Life Carriers catalyse this lifeless material, imparting through their persons the vital spirit spark; and forthwith do the inert patterns become living matter.
 \vs p036 3:4 \pc The vital spark --- the mystery of life --- is bestowed through the Life Carriers, not by them. They do indeed supervise such transactions, they formulate the life plasm itself, but it is the Universe Mother Spirit who supplies the essential factor of the living plasm. From the Creative Daughter of the Infinite Spirit comes that energy spark which enlivens the body and presages the mind.
 \vs p036 3:5 \pc In the bestowal of life the Life Carriers transmit nothing of their personal natures, not even on those spheres where new orders of life are projected. At such times they simply initiate and transmit the spark of life, start the required revolutions of matter in accordance with the physical, chemical, and electrical specifications of the ordained plans and patterns. Life Carriers are living catalytic presences which agitate, organize, and vitalize the otherwise inert elements of the material order of existence.
-\vs p036 3:6 \pc The Life Carriers of a planetary corps are given a certain period in which to establish life on a new world, approximately 500,000 years of the time of that planet. At the termination of this period, indicated by certain developmental attainments of the planetary life, they cease implantation efforts, and they may not subsequently add anything new or supplemental to the life of that planet.\fnc{\ldots{}subsequently add \bibtextul{any thing} new or supplemental\ldots{} \bibexpl{The compound word is the correct choice in this case. The sentence simply does not read well if, to test an alternative hypothesis, the assumption is made that the two-word format was chosen by the author for emphasis (which, to this editor, is the only discernible rationale for the two-word form).}}
+\vs p036 3:6 \pc The Life Carriers of a planetary corps are given a certain period in which to establish life on a new world, approximately 500,000 years of the time of that planet. At the termination of this period, indicated by certain developmental attainments of the planetary life, they cease implantation efforts, and they may not subsequently add anything\fnc{In the 1955 text ``any thing'' two words.} new or supplemental to the life of that planet.
 \vs p036 3:7 During the ages intervening between life establishment and the emergence of human creatures of moral status, the Life Carriers are permitted to manipulate the life environment and otherwise favourably directionize the course of biologic evolution. And this they do for long periods of time.
 \vs p036 3:8 When the Life Carriers operating on a new world have once succeeded in producing a being with will, with the power of moral decision and spiritual choice, then and there their work terminates --- they are through; they may manipulate the evolving life no further. From this point forward the evolution of living things must proceed in accordance with the endowment of the inherent nature and tendencies which have already been imparted to, and established in, the planetary life formulas and patterns. The Life Carriers are not permitted to experiment or to interfere with will; they are not allowed to dominate or arbitrarily influence moral creatures.
-\vs p036 3:9 Upon the arrival of a Planetary Prince they prepare to leave, though 2 of the senior carriers and 12 custodians may volunteer, by taking temporary renunciation vows, to remain indefinitely on the planet as advisers in the matter of the further development and conservation of the life plasm. Two such Sons and their 12 associates are now serving on Urantia.
+\vs p036 3:9 Upon the arrival of a Planetary Prince they prepare to leave, though two of the senior carriers and twelve custodians may volunteer, by taking temporary renunciation vows, to remain indefinitely on the planet as advisers in the matter of the further development and conservation of the life plasm. Two such Sons and their twelve associates are now serving on Urantia.
 \usection{Melchizedek Life Carriers}
 \vs p036 4:1 In every local system of inhabited worlds throughout Nebadon there is a single sphere whereon the Melchizedeks have functioned as life carriers. These abodes are known as the system \bibemph{midsonite} worlds, and on each of them a materially modified Melchizedek Son has mated with a selected Daughter of the material order of sonship. The Mother Eves of such midsonite worlds are dispatched from the system headquarters of jurisdiction, having been chosen by the designated Melchizedek life carrier from among the numerous volunteers who respond to the call of the System Sovereign addressed to the Material Daughters of his sphere.
 \vs p036 4:2 The progeny of a Melchizedek life carrier and a Material Daughter are known as \bibemph{midsoniters.} The Melchizedek father of such a race of supernal creatures eventually leaves the planet of his unique life function, and the Mother Eve of this special order of universe beings also departs upon the appearance of the 7\ts{th} generation of planetary offspring. The direction of such a world then devolves upon her eldest son.
