Position the footnote more accurately

--- a/tex/p037.tex
+++ b/tex/p037.tex
@@ -76,7 +76,7 @@
 \usection{Higher Spirit Orders of Assignment}
 \vs p037 8:1 Besides the power centres and the physical controllers, certain of the higher\hyp{}origin spirit beings of the family of the Infinite Spirit are of permanent assignment to the local universe. Of the higher spirit orders of the family of the Infinite Spirit the following are so assigned:
 \vs p037 8:2 \pc The \bibemph{Solitary Messengers,} when functionally attached to the local universe administration, render invaluable service to us in our efforts to overcome the handicaps of time and space. When they are not thus assigned, we of the local universes have absolutely no authority over them, but even then these unique beings are always willing to help us with the solution of our problems and with the execution of our mandates.
-\vs p037 8:3 Andovontia is the name of the tertiary \bibemph{Universe Circuit Supervisor} stationed in our local universe. He is concerned only with spirit and morontia circuits, not with those under the jurisdiction of the power directors. It was he who isolated Urantia at the time of the Caligastia betrayal of the planet during the testing seasons of the Lucifer rebellion. In sending greetings to the mortals of Urantia, he expresses pleasure in the anticipation of your sometime restoration to the universe circuits of his supervision.\fnc{Andovontia is the name of the \bibtextul{secondary} \bibemph{Universe Circuit Supervisor} stationed in our local universe. \bibexpl{While both a secondary and a tertiary Circuit Supervisor are assigned to the supervision of a single local universe’s circuits, only the tertiary Circuit Supervisor is stationed within the local universe --- the secondary Circuit Supervisor is located on the superuniverse headquarters (See \bibref[24:1.5-7]{p024 1:5} in the text). Therefore, if Andovontia is “stationed in our local universe” he would be a tertiary Universe Circuit Supervisor. A straightforward explanation for the origin of the error relies on the inferred use of the somewhat unusual but nonetheless valid abbreviations 1ry, 2ry, and 3ry in the manuscript. These abbreviations are common within several disciplines (e.g., grammar/phonetics, medicine, chemistry) and when used in close proximity to each other their meanings are clear even to the general reader, but this instance is not located near similar references, so the likelihood of its use here remains only a probability based on typographical observation, rather than a certainty. This explanation, however, makes an impossible typographical error into common one --- a mis-typed character.}}
+\vs p037 8:3 Andovontia is the name of the tertiary\fnc{In the 1955 text ``secondary''. While both a secondary and a tertiary Circuit Supervisor are assigned to the supervision of a single local universe’s circuits, only the tertiary Circuit Supervisor is stationed within the local universe --- the secondary Circuit Supervisor is located on the superuniverse headquarters (See \bibref[24:1.5-7]{p024 1:5} in the text). Therefore, if Andovontia is “stationed in our local universe” he would be a tertiary Universe Circuit Supervisor. A straightforward explanation for the origin of the error relies on the inferred use of the somewhat unusual but nonetheless valid abbreviations 1ry, 2ry, and 3ry in the manuscript. These abbreviations are common within several disciplines (e.g., grammar/phonetics, medicine, chemistry) and when used in close proximity to each other their meanings are clear even to the general reader, but this instance is not located near similar references, so the likelihood of its use here remains only a probability based on typographical observation, rather than a certainty. This explanation, however, makes an impossible typographical error into common one --- a mis\hyp{}typed character.} \bibemph{Universe Circuit Supervisor} stationed in our local universe. He is concerned only with spirit and morontia circuits, not with those under the jurisdiction of the power directors. It was he who isolated Urantia at the time of the Caligastia betrayal of the planet during the testing seasons of the Lucifer rebellion. In sending greetings to the mortals of Urantia, he expresses pleasure in the anticipation of your sometime restoration to the universe circuits of his supervision.
 \vs p037 8:4 The Nebadon \bibemph{Census Director,} Salsatia, maintains headquarters within the Gabriel sector of Salvington. He is automatically cognizant of the birth and death of will and currently registers the exact number of will creatures functioning in the local universe. He works in close association with the personality recorders domiciled on the record worlds of the archangels.
 \vs p037 8:5 An \bibemph{Associate Inspector} is resident on Salvington. He is the personal representative of the Supreme Executive of Orvonton. His associates, the \bibemph{Assigned Sentinels} in the local systems, are also representatives of the Supreme Executive of Orvonton.
 \vs p037 8:6 The \bibemph{Universal Conciliators} are the travelling courts of the universes of time and space, functioning from the evolutionary worlds up through every section of the local universe and on beyond. These referees are registered on Uversa; the exact number operating in Nebadon is not of record, but I estimate that there are in the neighbourhood of 100,000,000 conciliating commissions in our local universe.
