Tidy up the footnotes

--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -15,7 +15,7 @@
 \vs p041 0:3 One or more --- even many --- such nebulae may be encompassed within the domain of a single local universe even as Nebadon was physically assembled out of the stellar and planetary progeny of Andronover and other nebulae. The spheres of Nebadon are of diverse nebular ancestry, but they all had a certain minimum commonness of space motion which was so adjusted by the intelligent efforts of the power directors as to produce our present aggregation of space bodies, which travel along together as a contiguous unit over the orbits of the superuniverse.
 \vs p041 0:4 Such is the constitution of the local star cloud of Nebadon, which today swings in an increasingly settled orbit about the Sagittarius centre of that minor sector of Orvonton to which our local creation belongs.
 \usection{The Nebadon Power Centres}
-\vs p041 1:1 The spiral and other nebulae, the mother wheels of the spheres of space, are initiated by Paradise force organizers; and following nebular evolution of gravity response, they are superseded in superuniverse function by the power centres and physical controllers, who thereupon assume full responsibility for directing the physical evolution of the ensuing generations of stellar and planetary offspring. This physical supervision of the Nebadon preuniverse was, upon the arrival of our Creator Son, immediately co\hyp{}ordinated with his plan for universe organization. Within the domain of this Paradise Son of God,\fnc{\textbf{God, the Supreme}, In 1995 text no comma.} the Supreme Power Centres and the Master Physical Controllers collaborated with the later appearing Morontia Power Supervisors and others to produce that vast complex of communication lines, energy circuits, and power lanes which firmly bind the manifold space bodies of Nebadon into one integrated administrative unit.
+\vs p041 1:1 The spiral and other nebulae, the mother wheels of the spheres of space, are initiated by Paradise force organizers; and following nebular evolution of gravity response, they are superseded in superuniverse function by the power centres and physical controllers, who thereupon assume full responsibility for directing the physical evolution of the ensuing generations of stellar and planetary offspring. This physical supervision of the Nebadon preuniverse was, upon the arrival of our Creator Son, immediately co\hyp{}ordinated with his plan for universe organization. Within the domain of this Paradise Son of God,\fnc{In 1995 text no comma after ``God''.} the Supreme Power Centres and the Master Physical Controllers collaborated with the later appearing Morontia Power Supervisors and others to produce that vast complex of communication lines, energy circuits, and power lanes which firmly bind the manifold space bodies of Nebadon into one integrated administrative unit.
 \vs p041 1:2 100 Supreme Power Centres of the fourth order are permanently assigned to our local universe. These beings receive the incoming lines of power from the third\hyp{}order centres of Uversa and relay the down\hyp{}stepped and modified circuits to the power centres of our constellations and systems. These power centres, in association, function to produce the living system of control and equalization which operates to maintain the balance and distribution of otherwise fluctuating and variable energies. Power centres are not, however, concerned with transient and local energy upheavals, such as sun spots and system electric disturbances; light and electricity are not the basic energies of space; they are secondary and subsidiary manifestations.
 \vs p041 1:3 The 100 local universe centres are stationed on Salvington, where they function at the exact energy centre of that sphere. Architectural spheres, such as Salvington, Edentia, and Jerusem, are lighted, heated, and energized by methods which make them quite independent of the suns of space. These spheres were constructed --- made to order --- by the power centres and physical controllers and were designed to exert a powerful influence over energy distribution. Basing their activities on such focal points of energy control, the power centres, by their living presences, directionize and channelize the physical energies of space. And these energy circuits are basic to all physical\hyp{}material and morontia\hyp{}spiritual phenomena.
 \vs p041 1:4 10 Supreme Power Centres of the fifth order are assigned to each of Nebadon’s primary subdivisions, the 100 constellations. In Norlatiadek, your constellation, they are not stationed on the headquarters sphere but are situated at the centre of the enormous stellar system which constitutes the physical core of the constellation. On Edentia there are 10 associated mechanical controllers and 10 frandalanks who are in perfect and constant liaison with the near\hyp{}by power centres.
@@ -44,7 +44,7 @@
 \vs p041 4:1 The mass of your sun is slightly greater than the estimate of your physicists, who have reckoned it as about $2\times 10^{30}$\,kg\fnst{The present estimate is: $1.98892 \times 10^{30}$ kg.}. It now exists about halfway between the most dense and the most diffuse stars, having about 1.5 times the density of water\fnst{More accurately: $1.408 \times 10^3$\,kg/m\ts{3}.}. But your sun is neither a liquid nor a solid --- it is gaseous --- and this is true notwithstanding the difficulty of explaining how gaseous matter can attain this and even much greater densities.
 \vs p041 4:2 \pc Gaseous, liquid, and solid states are matters of atomic\hyp{}molecular relationships, but density is a relationship of space and mass. Density varies directly with the quantity of mass in space and inversely with the amount of space in mass, the space between the central cores of matter and the particles which whirl around these centres as well as the space within such material particles.
 \vs p041 4:3 \pc Cooling stars can be physically gaseous and tremendously dense at the same time. You are not familiar with the solar \bibemph{supergases,}\fnst{In the original source text \cite{Eddington1} the phrase ``not imperfect, but superperfect'' explains the prefix ``super''.} but these and other unusual forms of matter explain how even nonsolid suns can attain a density equal to iron --- about the same as Urantia --- and yet be in a highly heated gaseous state and continue to function as suns. The atoms in these dense supergases are exceptionally small; they contain few electrons. Such suns have also largely lost their free ultimatonic stores of energy.
-\vs p041 4:4 One of your near\hyp{}by suns, which started life with about the same mass as yours, has now contracted almost to the size of Urantia, having become 40,000 times as dense as your sun. The weight of this hot\hyp{}cold gaseous\hyp{}solid is about 61 kg/cm\ts{3}\fnst{Calculating the density we obtain $\rho = 1851.8$\,kg/cm\ts{3}, which differs greatly from the figure 61\,kg/cm\ts{3} given in the text. Therefore, this ``near-by sun'' has lost most of its mass by now.}. And still this sun shines with a faint reddish glow, the senile glimmer of a dying monarch of light.\fnc{\ldots{}having become \bibtextul{sixty thousand} times as dense as your sun\ldots{} \bibexpl{Textual consistency and current scientific estimates of our sun’s density both support the change to “40,000.” The first paragraph of this section states that our sun is about 1.5 times the density of water 1 g/cm\ts{3}, and 40,000 times this is 40 kg/cm\ts{3}; the current scientific estimate of the sun’s density is 1.4 times the density of water; 40,000 times that is 56 kg/cm\ts{3}. The likely cause of this error in the 1955 text is that the number in question was written as a numeral in the manuscript (40,000 not forty thousand), and the error was caused by a simple keystroke error in which 6 was mis-keyed for 4, creating 60,000 instead of 40,000. When the text was formatted for printing, the numerals were changed to words, and an error that formerly consisted of one digit was transformed into an incorrect word. The formatting of words and numbers for printing is not a revelatory issue; it is a matter of style, and is covered extensively in the Chicago Manual of Style. (The problem at \bibref[43:1.6]{p043 1:6} in the text appears to have had an identical origin, and \bibref[42:5.1]{p042 5:1} in the text is very closely related.)}}
+\vs p041 4:4 One of your near\hyp{}by suns, which started life with about the same mass as yours, has now contracted almost to the size of Urantia, having become 40,000\fnc{In the 1955 text ``sixty thousand''. Textual consistency and current scientific estimates of our sun’s density both support the change to “40,000.” The first paragraph of this section states that our sun is about 1.5 times the density of water 1 g/cm\ts{3}, and 40,000 times this is 40 kg/cm\ts{3}; the current scientific estimate of the sun’s density is 1.4 times the density of water; 40,000 times that is 56 kg/cm\ts{3}. The likely cause of this error in the 1955 text is that the number in question was written as a numeral in the manuscript (40,000 not forty thousand), and the error was caused by a simple keystroke error in which 6 was mis-keyed for 4, creating 60,000 instead of 40,000. When the text was formatted for printing, the numerals were changed to words, and an error that formerly consisted of one digit was transformed into an incorrect word. The formatting of words and numbers for printing is not a revelatory issue; it is a matter of style, and is covered extensively in the Chicago Manual of Style. (The problem at \bibref[43:1.6]{p043 1:6} in the text appears to have had an identical origin, and \bibref[42:5.1]{p042 5:1} in the text is very closely related.)} times as dense as your sun. The weight of this hot\hyp{}cold gaseous\hyp{}solid is about 61 kg/cm\ts{3}\fnst{Calculating the density we obtain $\rho = 1851.8$\,kg/cm\ts{3}, which differs greatly from the figure 61\,kg/cm\ts{3} given in the text. Therefore, this ``near-by sun'' has lost most of its mass by now.}. And still this sun shines with a faint reddish glow, the senile glimmer of a dying monarch of light.
 \vs p041 4:5 Most of the suns, however, are not so dense. One of your nearer neighbours\fnst{The distance to Capella (α Aurig\ae) is estimated to be about 43 light years.} has a density exactly equal to that of your atmosphere at sea level. If you were in the interior of this sun, you would be unable to discern anything. And temperature permitting, you could penetrate the majority of the suns which twinkle in the night sky and notice no more matter than you perceive in the air of your earthly living rooms.
 \vs p041 4:6 The massive sun of Veluntia, one of the largest in Orvonton, has a density only 0.001 that of Urantia’s atmosphere. Were it in composition similar to your atmosphere and not superheated, it would be such a vacuum that human beings would speedily suffocate if they were in or on it.
 \vs p041 4:7 Another of the Orvonton giants now has a surface temperature a trifle under 3,000\,°C. Its diameter is over 482,803,200\,km --- ample room to accommodate your sun and the present orbit of the earth. And yet, for all this enormous size, over 40,000,000 times\fnst{Here the ``size'' obviously signifies the volume, not the diameter, because the diameter of the Sun is 1,391,400\,km and therefore the ratio of volumes of the two stars is 41,778,652, i.e. approximately 40,000,000.} that of your sun, its mass is only about 30 times greater. These enormous suns have an extending fringe that reaches almost from one to the other.
@@ -67,7 +67,7 @@
 \vs p041 6:7 \pc It should be remembered that spectral analyses show only sun\hyp{}surface compositions. For example: Solar spectra exhibit many iron lines, but iron is not the chief element in the sun. This phenomenon is almost wholly due to the present temperature of the sun’s surface, a little less than 6,000\,°C, this temperature being very favourable to the registry of the iron spectrum.
 \usection{Sources of Solar Energy}
 \vs p041 7:1 The internal temperature of many of the suns, even your own, is much higher than is commonly believed. In the interior of a sun practically no whole atoms exist; they are all more or less shattered by the intensive X\hyp{}ray bombardment which is indigenous to such high temperatures. Regardless of what material elements may appear in the outer layers of a sun, those in the interior are rendered very similar by the dissociative action of the disruptive X\hyp{}rays. X\hyp{}ray is the great leveler of atomic existence.
-\vs p041 7:2 The surface temperature of your sun is almost 6,000\,°C\fnst{The American text of 1955 says ``6,000 degrees'' and specifies that it refers to ``your Fahrenheit scale''. However, the number 6,000 is clearly taken from p.\,14 of \cite{Eddington1}, where it refers to our Centigrade (Celsius) scale, as is indicated in the Preface on p.~6 of this work. Therefore, the modern estimates of the temperature of our Sun's photosphere (5,778\,K) are in agreement with the value given in this Revelation, as long as the units discrepancy is taken into count. What happened here is that Dr~Sadler quoted the text of \cite{Eddington1}, but forgot about the warning given concerning the units in the Preface thereof. Exactly the same situation occurred with the ``English vs American billions'' issue below, see \bibref[41:9.3]{p041 9:3}.}, but it rapidly increases as the interior is penetrated until it attains the unbelievable height of about 35,000,000\,°C in the central regions. (All of these temperatures refer to your Celsius\fnc{\textbf{Celsius}, The American text of 1955 says ``Fahrenheit''. However, it is now perfectly clear that these temperatures were taken from the abovementioned human source without converting from Celsius to Fahrenheit.} scale.)
+\vs p041 7:2 The surface temperature of your sun is almost 6,000\,°C\fnst{The American text of 1955 says ``6,000 degrees'' and specifies that it refers to ``your Fahrenheit scale''. However, the number 6,000 is clearly taken from p.\,14 of \cite{Eddington1}, where it refers to our Centigrade (Celsius) scale, as is indicated in the Preface on p.~6 of this work. Therefore, the modern estimates of the temperature of our Sun's photosphere (5,778\,K) are in agreement with the value given in this Revelation, as long as the units discrepancy is taken into count. What happened here is that Dr~Sadler quoted the text of \cite{Eddington1}, but forgot about the warning given concerning the units in the Preface thereof. Exactly the same situation occurred with the ``English vs American billions'' issue below, see \bibref[41:9.3]{p041 9:3}.}, but it rapidly increases as the interior is penetrated until it attains the unbelievable height of about 35,000,000\,°C in the central regions. (All of these temperatures refer to your Celsius\fnc{The 1955 text says ``Fahrenheit''. However, it is now perfectly clear that these temperatures were taken from Eddington's book ``Stars and Atoms'' \cite{Eddington1} without converting the units from Celsius to Fahrenheit.} scale.)
 \vs p041 7:3 \pc All of these phenomena are indicative of enormous energy expenditure, and the sources of solar energy, named in the order of their importance, are:
 \vs p041 7:4 \ublistelem{1.}\bibnobreakspace Annihilation of atoms and, eventually, of electrons.
 \vs p041 7:5 \ublistelem{2.}\bibnobreakspace Transmutation of elements, including the radioactive group of energies thus liberated.
