Shorten the footnote

--- a/tex/p094.tex
+++ b/tex/p094.tex
@@ -45,7 +45,7 @@
 \vs p094 4:3 \ublistelem{1.}\bibnobreakspace \bibemph{The Brahman,} the Absolute, the Infinite One, the IT IS.
 \vs p094 4:4 \ublistelem{2.}\bibnobreakspace \bibemph{The Trimurti,} the supreme trinity of Hinduism. In this association \bibemph{Brahma,} the first member, is conceived as being self\hyp{}created out of the Brahman --- infinity. Were it not for close identification with the pantheistic Infinite One, Brahma could constitute the foundation for a concept of the Universal Father. Brahma is also identified with fate.
 \vs p094 4:5 The worship of the second and third members, Siva and Vishnu, arose in the first millennium after Christ. \bibemph{Siva} is lord of life and death, god of fertility, and master of destruction. \bibemph{Vishnu} is extremely popular due to the belief that he periodically incarnates in human form. In this way, Vishnu becomes real and living in the imaginations of the Indians. Siva and Vishnu are each regarded by some as supreme over all.
-\vs p094 4:6 \ublistelem{3.}\bibnobreakspace \bibemph{Vedic and post\hyp{}Vedic deities.} Many of the ancient gods of the Aryans, such as Agni, Indra, and Soma, have persisted\fnc{\textbf{Agni, Indra, and Soma, have persisted}, In 1955 text: Agni, Indra, Soma, have persisted.} as secondary to the three members of the Trimurti. Numerous additional gods have arisen since the early days of Vedic India, and these have also been incorporated into the Hindu pantheon.
+\vs p094 4:6 \ublistelem{3.}\bibnobreakspace \bibemph{Vedic and post\hyp{}Vedic deities.} Many of the ancient gods of the Aryans, such as Agni, Indra, and\fnc{In 1955 text the word ``and'' is missing.} Soma, have persisted as secondary to the three members of the Trimurti. Numerous additional gods have arisen since the early days of Vedic India, and these have also been incorporated into the Hindu pantheon.
 \vs p094 4:7 \ublistelem{4.}\bibnobreakspace \bibemph{The demigods:} supermen, semigods, heroes, demons, ghosts, evil spirits, sprites, monsters, goblins, and saints of the later\hyp{}day cults.
 \vs p094 4:8 \pc While Hinduism has long failed to vivify the Indian people, at the same time it has usually been a tolerant religion. Its great strength lies in the fact that it has proved to be the most adaptive, amorphic religion to appear on Urantia. It is capable of almost unlimited change and possesses an unusual range of flexible adjustment from the high and semimonotheistic speculations of the intellectual Brahman to the arrant fetishism and primitive cult practices of the debased and depressed classes of ignorant believers.
 \vs p094 4:9 Hinduism has survived because it is essentially an integral part of the basic social fabric of India. It has no great hierarchy which can be disturbed or destroyed; it is interwoven into the life pattern of the people. It has an adaptability to changing conditions that excels all other cults, and it displays a tolerant attitude of adoption toward many other religions, Gautama Buddha and even Christ himself being claimed as incarnations of Vishnu.
@@ -56,7 +56,7 @@
 \vs p094 5:3 \ublistelem{1.}\bibnobreakspace The lingering teachings of Singlangton, which persisted in the concept of Shang\hyp{}ti, the God of Heaven. In the times of Singlangton the Chinese people became virtually monotheistic; they concentrated their worship on the One Truth, later known as the Spirit of Heaven, the universe ruler. And the yellow race never fully lost this early concept of Deity, although in subsequent centuries many subordinate gods and spirits insidiously crept into their religion.
 \vs p094 5:4 \ublistelem{2.}\bibnobreakspace The Salem religion of a Most High Creator Deity who would bestow his favour upon mankind in response to man’s faith. But it is all too true that, by the time the Melchizedek missionaries had penetrated to the lands of the yellow race, their original message had become considerably changed from the simple doctrines of Salem in the days of Machiventa.
 \vs p094 5:5 \ublistelem{3.}\bibnobreakspace The Brahman\hyp{}Absolute concept of the Indian philosophers, coupled with the desire to escape all evil. Perhaps the greatest extraneous influence in the eastward spread of the Salem religion was exerted by the Indian teachers of the Vedic faith, who injected their conception of the Brahman --- the Absolute --- into the salvationistic thought of the Salemites.
-\vs p094 5:6 \pc This composite belief spread through the lands of the yellow and brown races as an underlying influence in religio\hyp{}philosophic thought. In Japan this proto\hyp{}Taoism was known as Shinto, and in this country, far\hyp{}distant from Salem of Palestine, the peoples learned of the incarnation of Machiventa Melchizedek, who dwelt upon earth that the name of God might not be forgotten by mankind.\fnc{In Japan this proto-Taoism was known as Shinto, and in this country, \bibtextul{far distant} from Salem of Palestine,\ldots{} \bibexpl{This was the only instance of the un-hyphenated form “far distant” in the 1955 text. The committee’s decision to hyphenate and thereby standardize usage in The Urantia Book is the least complex resolution to the perceived problem of variant forms of the term and is in agreement with Webster’s of 1934.}}
+\vs p094 5:6 \pc This composite belief spread through the lands of the yellow and brown races as an underlying influence in religio\hyp{}philosophic thought. In Japan this proto\hyp{}Taoism was known as Shinto, and in this country, far\hyp{}distant\fnc{In 1955 text un\hyp{}hyphenated ``far distant''.} from Salem of Palestine, the peoples learned of the incarnation of Machiventa Melchizedek, who dwelt upon earth that the name of God might not be forgotten by mankind.
 \vs p094 5:7 In China all of these beliefs were later confused and compounded with the ever\hyp{}growing cult of ancestor worship. But never since the time of Singlangton have the Chinese fallen into helpless slavery to priestcraft. The yellow race was the first to emerge from barbaric bondage into orderly civilization because it was the first to achieve some measure of freedom from the abject fear of the gods, not even fearing the ghosts of the dead as other races feared them. China met her defeat because she failed to progress beyond her early emancipation from priests; she fell into an almost equally calamitous error, the worship of ancestors.
 \vs p094 5:8 \pc But the Salemites did not labour in vain. It was upon the foundations of their gospel that the great philosophers of sixth\hyp{}century China built their teachings. The moral atmosphere and the spiritual sentiments of the times of Lao\hyp{}tse and Confucius grew up out of the teachings of the Salem missionaries of an earlier age.
 \usection{Lao\hyp{}Tse and Confucius}
