Remove duplicated text in the footnote

--- a/tex/p012.tex
+++ b/tex/p012.tex
@@ -94,7 +94,7 @@
 \vs p012 6:13 \pc The Unqualified Absolute pervades all space. We are not altogether clear as to the exact status of the Deity and Universal Absolutes, but we know the latter functions wherever the Deity and Unqualified Absolutes function. The Deity Absolute may be universally present but hardly space present. The Ultimate is, or sometime will be, space present to the outer margins of the fourth space level. We doubt that the Ultimate will ever have a space presence beyond the periphery of the master universe, but within this limit the Ultimate is progressively integrating the creative organization of the potentials of the three Absolutes.
 \usection{The Part and the Whole}
 \vs p012 7:1 There is operative throughout all time and space and with regard to all reality of whatever nature an inexorable and impersonal law which is equivalent to the function of a cosmic providence. Mercy characterizes God’s attitude of love for the individual; impartiality motivates God’s attitude toward the total. The will of God does not necessarily prevail in the part --- the heart of any one personality --- but his will does actually rule the whole, the universe of universes.
-\vs p012 7:2 \pc In all his dealings with all his beings it is true that the laws of God are not inherently arbitrary. To you, with your limited vision and finite viewpoint, the acts of God must often appear to be dictatorial and arbitrary. The laws of God are merely the habits of God\fnst{\textbf{The laws of God are merely the habits of God}, This thought comes from \cite{Strong1}.}, his way of repeatedly doing things; and he ever does all things well. You observe that God does the same thing in the same way, repeatedly, simply because that is the best way to do that particular thing in a given circumstance; and the best way is the right way, and therefore does infinite wisdom always order it done in that precise and perfect manner. You should also remember that nature is not the exclusive act of Deity; other influences are present in those phenomena which man calls nature.
+\vs p012 7:2 \pc In all his dealings with all his beings it is true that the laws of God are not inherently arbitrary. To you, with your limited vision and finite viewpoint, the acts of God must often appear to be dictatorial and arbitrary. The laws of God are merely the habits of God\fnst{This statement is taken from \cite{Strong1}.}, his way of repeatedly doing things; and he ever does all things well. You observe that God does the same thing in the same way, repeatedly, simply because that is the best way to do that particular thing in a given circumstance; and the best way is the right way, and therefore does infinite wisdom always order it done in that precise and perfect manner. You should also remember that nature is not the exclusive act of Deity; other influences are present in those phenomena which man calls nature.
 \vs p012 7:3 It is repugnant to the divine nature to suffer any sort of deterioration or ever to permit the execution of any purely personal act in an inferior way. It should be made clear, however, that, \bibemph{if,} in the divinity of any situation, in the extremity of any circumstance, in any case where the course of supreme wisdom might indicate the demand for different conduct --- if the demands of perfection might for any reason dictate another method of reaction, a better one, then and there would the all\hyp{}wise God function in that better and more suitable way. That would be the expression of a higher law, not the reversal of a lower law.
 \vs p012 7:4 God is not a habit\hyp{}bound slave to the chronicity of the repetition of his own voluntary acts. There is no conflict among the laws of the Infinite; they are all perfections of the infallible nature; they are all the unquestioned acts expressive of faultless decisions. Law is the unchanging reaction of an infinite, perfect, and divine mind. The acts of God are all volitional notwithstanding this apparent sameness. In God there “is no variableness neither shadow of changing.”\fnst{See James~1:17.} But all this which can be truly said of the Universal Father cannot be said with equal certainty of all his subordinate intelligences or of his evolutionary creatures.
 \vs p012 7:5 Because God is changeless, therefore can you depend, in all ordinary circumstances, on his doing the same thing in the same identical and ordinary way. God is the assurance of stability for all created things and beings. He is God; therefore he changes not.
